# pronouncer

./: pyproject.toml
src/pronouncer/: api.py  constants.py  tasks.py
src/templates/: index.html
tests/: test_pronouncer.py
